--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ main > section.hero {
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
+  z-index: 5;
 }
 
 section.hero > .call-to-action {
@@ -137,31 +138,45 @@ footer {
   color: var(--off-white);
 }
 
-/* tooltip code below */
-
-span.tooltip {
-  color: var(--danger-color);
+.tooltip {
+  color: red;
   position: relative;
-  cursor: pointer;
+  display: inline-block;
+  border-bottom: red;
 }
 
-/* underline span on hover/focus */
-span.tooltip:hover,
-span.tooltip:focus {
-  text-decoration: underline;
-}
-/* show tooltip on hover/focus */
-span.tooltip:hover > span,
-span.tooltip:focus > span {
-  display: inline;
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  left: 50%;
+  margin-left: -60px;
 }
 
-/* styling for tooltip bubble */
-span.tooltip span {
-  display: none;
-}
-
-/* styling for tooltip bubble arrow */
-span.tooltip span::after {
+.tooltip .tooltiptext::after {
   content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  right: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: black transparent transparent transparent;
+}
+
+.tooltip:hover {
+  text-decoration: underline;
+  color: red;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
 }
